User表的相关接口

--- a/SchoolData/Web.config
+++ b/SchoolData/Web.config
@@ -4,6 +4,9 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
 -->
 <configuration>
+  <appSettings>
+    <add key="ConnectionString" value="User Id=sa;Password=cnbb1997;Initial Catalog=school;Data Source=LAPTOP-3H84DA7S\FIRSTSQLSERVER;Connect Timeout=30"/>
+  </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1"/>
     <httpRuntime targetFramework="4.6.1"/>    
