添加Grades实体，添加接口：根据年级给出对应班级

--- a/Dap/Dap.csproj
+++ b/Dap/Dap.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="grades.cs" />
     <Compile Include="common.cs" />
     <Compile Include="user.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
