--- a/SchoolData/SchoolData.csproj
+++ b/SchoolData/SchoolData.csproj
@@ -108,6 +108,7 @@
     <Compile Include="App_Start\HttpHeaderFilter.cs" />
     <Compile Include="App_Start\SwaggerConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\GradesController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
