添加资源检索接口（如传入学科名，后台找到对应学科ID，再查找对应资源）

--- a/Dap/Dap.csproj
+++ b/Dap/Dap.csproj
@@ -42,8 +42,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="discipline.cs" />
     <Compile Include="grades.cs" />
     <Compile Include="common.cs" />
+    <Compile Include="resource.cs" />
+    <Compile Include="type.cs" />
     <Compile Include="user.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
